--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
-  go:
+  web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: build/web/Dockerfile
     stdin_open: true
     tty: true
     volumes:
@@ -12,8 +12,9 @@ services:
       - 8080:8080
 
   db:
-    image: mysql:8.0
-    platform: linux/x86_64
+    build:
+      context: ./build/db
+      dockerfile: Dockerfile
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: go_database
@@ -24,9 +25,6 @@ services:
     volumes:
       - db-data:/var/lib/mysql
       - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./initdb.d:/docker-entrypoint-initdb.d
-    ports:
-      - 3306:3306
 
 volumes:
   db-data:
